<resources>
    <!--家庭医生-->
    <string name="rc_fd">家庭医生</string>
    <string name="rc_fd_v2">健康服务</string>
    <string name="rc_fd_office_screen">科室筛选</string>
    <string name="rc_fd_consult_record">咨询记录</string>
    <string name="rc_fd_my_doctor">我的医生</string>
    <string name="rc_fd_my_doctor_introduced">+ 我的医生</string>
    <string name="rc_fd_consult_count">咨询人次</string>
    <string name="rc_fd_consult_count_number">%s 咨询人次</string>
    <string name="rc_fd_consult_time">咨询时间</string>
    <string name="rc_fd_consult_sound">咨询录音</string>
    <string name="rc_fd_consult_symptom">咨询症状</string>
    <string name="rc_fd_consult_suggest">医生建议</string>
    <string name="rc_fd_video_consult">视频咨询</string>
    <string name="rc_fd_add">去添加</string>
    <string name="rc_fd_consult_again">再次咨询</string>
    <string name="rc_fd_consult_add">添加为我的医生</string>
    <string name="rc_fd_no_sonsult_record">暂无咨询记录</string>
    <string name="rc_fd_office_no_doctor">该科室暂时没有医生哦～</string>
    <string name="rc_fd_evaluate">评价</string>
    <string name="rc_fd_evaluate_graded">您对本次服务的评分</string>
    <string name="rc_fd_evaluate_appraise">您对本次服务的评价</string>
    <string name="rc_fd_evaluate_fill_in">请填写您对医生的评价</string>
    <string name="rc_fd_server_evaluate">本次服务评价</string>
    <string name="rc_fd_no_consult_record">暂无咨询记录</string>


    <!-- 医生详情-->
    <string name="rc_fd_introduced">专家介绍</string>
    <string name="rc_fd_introduced_abstract">简介</string>
    <string name="rc_fd_introduced_license">资质证书</string>
    <string name="rc_fd_introduced_be_good_at">擅长</string>
    <string name="rc_fd_introduced_evaluate">评价</string>
    <string name="rc_fd_introduced_service_evaluate">服务综合评价</string>
    <string name="rc_fd_introduced_no_evaluate">暂无评价</string>
    <string name="rc_fd_introduced_add">已关注</string>

    <!--家庭医生-->
    <string name="rc_fd_specialist">专科医生</string>
    <string name="rc_fd_specialist_message">与更多专科医生视频交流</string>
    <string name="rc_fd_not_open_server">未开通服务</string>
    <string name="rc_fd_open_server_now">立即开通</string>
    <string name="rc_fd_video_phone">视频电话</string>
    <string name="rc_fd_useful_life">有效期：%1$s至%2$s</string>


    <string name="rc_fd_consult_server_now">立即咨询</string>
    <string name="rc_fd_img_content_consult">图文咨询</string>
    <string name="rc_fd_server_desc">家庭医生全部具有执业医生资格，为用户提供常见疾病视频医护咨询服务。7x24小时，随时响应。</string>


    <!--家庭医生V2-->
    <string name="rc_fd_doctor_info1">家庭医生在您身边</string>
    <string name="rc_fd_doctor_info2">7x24小时  专家医师服务</string>
    <string name="rc_fd_doctor_one_key_video_consult">一键视频咨询</string>
    <string name="rc_fd_consult_mingyi">咨询名医</string>
    <string name="rc_fd_more">更多 ></string>

    <!--家庭医生V3-->
    <string name="rc_fd_doctor_one_key_video_consult_v3">一键呼叫视频医生</string>
    <string name="rc_fd_doctor_info2_v3">7x24小时与医生面对面交流</string>
    <string name="rc_fd_doctor_online">在线医生</string>
    <string name="rc_fd_doctor_online_message">公立医院医生快速回复</string>
    <string name="rc_fd_doctor_mingyi">权威名医</string>
    <string name="rc_fd_doctor_mingyi_message">知名专家提供服务</string>

    <!--高血压专题-->
    <string name="rc_fd_hbp">高血压专题</string>
    <string name="rc_fd_hbp_details_introduce">高血压大数据联合实验室&amp;瑰柏科技</string>
    <string name="rc_fd_hbp_professor_introduce">专家介绍</string>
    <string name="rc_fd_hbp_consult_professor">咨询专家组</string>
    <string name="rc_fd_hbp_consult_professor_stop">结束本次咨询</string>
    <string name="rc_fd_hbp_consult_professor_already_stop">本次咨询已结束</string>
    <string name="rc_fd_hbp_consult_professor_edit_hint">请填写症状描述、治疗经过、检查情况等</string>

    <string name="rc_fd_true_name">姓名</string>
    <string name="rc_fd_true_sex">性别</string>
    <string name="rc_fd_true_age">年龄</string>
    <string name="rc_fd_woman">女</string>
    <string name="rc_fd_man">男</string>
    <string name="rc_fd_birthday">生日</string>
    <string name="rc_fd_stature">身高</string>
    <string name="rc_fd_weight">体重</string>
    <string name="rc_fd_truename_hint_input">请填写您的姓名</string>


    <string name="rc_fd_name">昵称</string>
    <string name="rc_fd_name_hint">最多32个字符(支持汉字、英文和数字等)</string>
    <string name="rc_fd_truename_hint">最多6个字</string>
    <string name="rc_fd_fill_in">请填写</string>
    <string name="rc_fd_fill_choose">请选择</string>
    <string name="rc_fd_edit_information">编辑个人信息</string>
    <string name="rc_fd_edit">编辑</string>

    <string name="rc_fd_saoyisao_text_2">越动吖 越健康</string>
    <string name="rc_fd_unknown">未知</string>
    <string name="rc_fd_choose_birthday">选择生日</string>
    <string name="rc_fd_choose_datetime">选择时间</string>
    <string name="rc_fd_choose_date">选择日期</string>

    <string name="rc_fd_perfect_information">完善信息</string>

    <string name="rc_fd_year">年</string>
    <string name="rc_fd_month">月</string>
    <string name="rc_fd_day">日</string>


    <!-- 完善历史就诊资料-->
    <string name="rc_mingyi_cm">完善历史就诊资料</string>
    <string name="rc_mingyi_cm_visiting_time">就诊时间</string>
    <string name="rc_mingyi_cm_no_choose">未选择</string>
    <string name="rc_mingyi_cm_no_input">未填写</string>
    <string name="rc_mingyi_cm_visiting_hospital">就诊医院</string>
    <string name="rc_mingyi_cm_visiting_department">就诊科室</string>
    <string name="rc_mingyi_cm_diagnostic_result">诊断结果</string>
    <string name="rc_mingyi_cm_input_diagnostic_result">请输入诊断结果</string>
    <string name="rc_mingyi_cm_inspection">检验单</string>
    <string name="rc_mingyi_cm_inspection_upload">检验单上传中，请耐心等待</string>
    <string name="rc_mingyi_cm_case_data">病例资料</string>
    <string name="rc_mingyi_cm_case_data_upload">病例资料上传中，请耐心等待</string>
    <string name="rc_mingyi_cm_symptoms_and_signs">当前最主要的异常感受与表现（症状与体征）</string>
    <string name="rc_mingyi_cm_input_symptoms">请输入您当前的症状</string>
    <string name="rc_mingyi_cm_want_get_help">希望得到医生的何种帮助</string>
    <string name="rc_mingyi_cm_input_want_get_help">请输入您想得到的帮助</string>
    <string name="rc_mingyi_cm_upload_error">上传失败，请重试</string>
    <string name="rc_mingyi_cm_save_null">请填写</string>

    <!-- 名医医生详情-->
    <string name="rc_mingyi_detail_service_description">服务说明</string>
    <string name="rc_mingyi_detail_doctor_introduction">医生简介</string>
    <string name="rc_mingyi_detail_doctor_call">预约通话</string>
    <string name="rc_mingyi_detail_doctor">医生详情</string>
    <string name="rc_mingyi_detail_tag1">专家本人接听</string>
    <string name="rc_mingyi_detail_tag2">未接通全额退款</string>
    <string name="rc_mingyi_detail_service_info">
        1）客户付款成功后，承诺时间内（工作时间的24小时内）没有等到专家答复，退款100%；\n
        2）因公司业务差错（推荐错误专家）导致服务不能正常进行的,全额退款；\n
        3）客户付款成功后，因专家临时会议/手术/出国等原因，未能预约到指定专家为其提供相应服务，导致服务不能顺利完成的（首选推荐协调同级别同科室其他专家，其次改约下一次门诊，再次退款），全额退款；\n
        4）由于客户原因，主动放弃这次咨询机会，承担20%的信用违约金，一般情况下退款80%；\n
        5）如因客户爽约原因造成医生损失，不予以退款。\n
    </string>
    <string name="rc_mingyi_detail_expected_time">期望时间</string>
    <string name="rc_mingyi_detail_consult_fee">咨询金额</string>
    <string name="rc_mingyi_detail_consult_patients">咨询患者</string>
    <string name="rc_mingyi_detail_consult_phone">接听电话</string>
    <string name="rc_mingyi_detail_consult_phone_address">通讯录</string>
    <string name="rc_mingyi_detail_consult_info">用户咨询须知：</string>
    <string name="rc_mingyi_detail_consult_info2">
        1、不受专家门诊时间限制，不受地域限制，随时预约；\n2、咨询时时间长达%1$d分钟；\n3、诊后回访；\n
    </string>
    <string name="rc_mingyi_detail_consult_sure_info">实付：¥%1$s</string>
    <string name="rc_mingyi_detail_consult_sure">确认预约</string>


    <!--名医-->
    <string name="rc_mingyi_user_help">已帮助</string>
    <string name="rc_mingyi_people">人</string>
    <string name="rc_mingyi_administrative_office">全部科室</string>
    <string name="rc_mingyi_service_price">服务价格</string>
    <string name="rc_mingyi_all_hospital">全部医院</string>
    <string name="rc_mingyi_experts">权威专家</string>
    <string name="rc_mingyi_professional_and_effective">专业有效</string>
    <string name="rc_mingyi_good_at">擅长领域：%1$s</string>
    <string name="rc_mingyi_consult_text">图文问诊</string>
    <string name="rc_mingyi_consult_phone">电话咨询</string>
    <string name="rc_mingyi_consult_video">视频咨询</string>
    <string name="rc_mingyi_consult_no">未开通</string>
    <string name="rc_mingyi_consult_no2">暂不支持</string>

    <!--寻医问诊-->
    <string name="rc_xun_yi_protocol_content">我已阅读并同意《快速问诊协议》</string>
    <string name="rc_xun_yi_patient">患者信息</string>
    <string name="rc_xun_yi_patient_photo">您的姓名、头像、图片仅问诊的医生可见</string>
    <string name="rc_xun_yi_consult_hint">问题将在23小时或者17次对话后关闭</string>
    <string name="rc_xun_yi_patient_add">立即添加</string>
    <string name="rc_xun_yi_patient_number">/500</string>
    <string name="rc_xun_yi_photo">照片</string>
    <string name="rc_xun_yi_commit">提交</string>
    <string name="rc_xun_yi_send">发送</string>
    <string name="rc_xun_yi_finish">本次通话已结束</string>
    <string name="rc_xun_yi_shoot">拍摄</string>
    <string name="rc_xun_yi_patient_content">描述你的病情，便于医生进行准确分析。例如病发时间、治疗过程、想得到怎样的答案。</string>
    <!-- 患者-->
    <string name="rc_fd_patient_list">患者列表</string>
    <string name="rc_fd_patient_add">添加患者</string>
    <string name="rc_xun_yi_no_data">暂无数据</string>
</resources>
