<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/rc_fd_ic_doctor2_card" />


        <TextView
            android:id="@+id/rc_fd_fragment_main_top_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="6dp"
            android:text="@string/rc_fd_doctor_info1"
            android:textColor="@color/rc_white"
            android:textSize="21dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rc_fd_fragment_main_top_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rc_fd_fragment_main_top_info"
            android:layout_marginLeft="41dp"
            android:text="@string/rc_fd_doctor_info2"
            android:textColor="@color/rc_white"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/rc_fd_fragment_main_top_open"
            android:layout_width="70dp"
            android:layout_height="23dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="41dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rc_fd_btn_doctor_open"
            android:gravity="center"
            android:text="@string/rc_fd_open_server_now"
            android:textColor="#e9c573"
            android:textSize="12dp"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/rc_fd_fragment_main_top_vip_icon"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="41dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:src="@mipmap/rc_fd_ic_doctor2_vip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/rc_fd_fragment_main_top_service_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rc_fd_fragment_main_top_info2"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="11dp"
            android:text="@string/rc_fd_not_open_server"
            android:textColor="@color/rc_white"
            android:textSize="11dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/rc_fd_fragment_main_consult"
            android:layout_width="205dp"
            android:layout_height="39dp"
            android:gravity="center"
            android:text="@string/rc_fd_doctor_one_key_video_consult"
            android:textColor="@color/rc_white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/rc_fd_fragment_main_specialist"
            android:layout_width="115dp"
            android:layout_height="39dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/rc_fd_specialist"
            android:textColor="?attr/RCDarkColor"
            android:textSize="14dp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/rc_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="12.5dp"
            android:layout_marginTop="10dp"
            android:text="@string/rc_fd_consult_mingyi"
            android:textColor="#666666"
            android:textSize="15.5dp" />


        <TextView
            android:id="@+id/rc_fd_fragment_main_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="12.5dp"
            android:paddingTop="10dp"
            android:text="@string/rc_fd_more"
            android:textColor="?attr/RCDarkColor"
            android:textSize="13dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/rc_line" />

    <ListView
        android:id="@+id/rc_fd_fragment_main_list_view"
        style="@style/RC_Base_ListViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>